# tiny_hack

./: README.md
1-mood-sip/: .gitignore  README.md
1-mood-sip/docs/: software.md
1-mood-sip/model/: main.py  pyproject.toml
1-mood-sip/slides/: slides_tinyhack_g1.pptx
1-mood-sip/src/: model_info.json  moodsip.ino  moodsip.onnx
1-mood-sip/src/MoodSip/: MoodSip.ino  flash_nicla_xip.sh
1-mood-sip/src/cloud_inference/database_utils/: data_splitter.py  usage.md
1-mood-sip/src/edge_vision_engine/: pyproject.toml  start.sh
1-mood-sip/src/edge_vision_engine/app/: __init__.py  app_factory.py  schemas.py
1-mood-sip/src/edge_vision_engine/app/services/: ai_service.py
1-mood-sip/src/mood-sip-web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
1-mood-sip/src/mood-sip-web/src/: App.tsx  config.ts  types.ts
apps/cloud_inference/notebooks/: quantize_classification.ipynb  test_model_livecam.ipynb
apps/edge_vision_engine/: main.py
apps/edge_vision_engine/app/: config.py
apps/edge_vision_engine/app/routers/: analysis.py
apps/mood-sip-web/: localhost+2-key.pem  localhost+2.pem  vite.config.ts
apps/mood-sip-web/public/: manifest.json
apps/mood-sip-web/src/: home.tsx  index.css  utils.ts
docs/: TROUBLESHOOTING_NICLAVISION.md  TROUBLESHOOTING_ZANT.md  quantize_classification.ipynb
mood-sip/: .gitignore  Makefile  README.md
mood-sip/MoodSip/: MoodSip.ino
mood-sip/MoodSip/src/: StateMachine.cpp  StateMachine.h
mood-sip/model/: train_local.py
mood-sip/src/MoodSip/: MoodSip.ino  custom.ld
(+7 files in other folders)
